<resources>
    <string name="app_name">Blocker</string>
    <string name="title_activity_main">Installed Applications</string>
    <string name="system_app_tab_text">System</string>
    <string name="third_party_app_tab_text">Third party</string>
    <string name="action_settings">Settings</string>
    <string name="third_party_app">Third Party</string>
    <string name="system_app">System</string>
    <string name="receiver">Receiver</string>
    <string name="provider">Content Provider</string>
    <string name="activity">Activity</string>
    <string name="service">Service</string>
    <string name="loading_text">Loading…</string>
    <string name="app_cannot_start">This application cannot be started directly</string>
    <string name="no_app_message">OOps, I cannot find any application.</string>
    <string name="no_component_message">OOps, I cannot find any component here.</string>
    <string name="application_label">Name: %1$s</string>
    <string name="min_sdk_version">Minimum SDK Version: %1$s</string>
    <string name="package_name">Package name: %1$s</string>
    <string name="menu_filter">Filter</string>
    <string name="refresh">Refresh</string>
    <string name="logo">Logo</string>
    <string name="app_list_title">Application list</string>
    <!--COPY FROM https://github.com/RikkaApps/Shizuku/blob/master/manager/src/main/res/values/strings.xml-->
    <string name="copy_command">Copy</string>
    <string name="send_command">Send</string>
    <string name="starting_shell" translatable="false">Starting root shell…</string>
    <string name="cannot_start_no_root" translatable="false">Can\'t start service because root permission is not granted or this device is not rooted.</string>
    <string name="cannot_start_shell_failed" translatable="false">There\'s something wrong when running shell command.</string>

    <!-- content description-->
    <string name="app_icon_description">Application icon</string>
    <string name="name_asc">Name (Ascending)</string>
    <string name="name_des">Name (Descending)</string>
    <string name="installation_date">First Install Date</string>
    <string name="alert">Alert</string>
    <string name="oops">Oops</string>
    <string name="no_root_error_message">Error occurs while switching the component state. \n Stacktrace:\n %1$s</string>
    <string name="close">Close</string>
    <string name="package_name_asc">Package Name (Ascending)</string>
    <string name="package_name_des">Package Name (Descending)</string>
    <string name="search">Search</string>
    <string name="component_like_description">Like button</string>
    <string name="component_dislike_description">Dislike button</string>
    <string name="block_by_ifw">Block By IFW</string>
    <string name="view_component_comments">View All Comments</string>
    <string name="upvote">Up Vote</string>
    <string name="downvote">Down Vote</string>
    <string name="enable_by_ifw">Enable by IFW</string>
    <string name="launch_activity">Launch Activity</string>
    <string name="comment">Comment</string>
    <string name="add_comment_hint">Put your comment…</string>
    <string name="add_comment">Add A Comment</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="vote_fail">Fail to vote this component.</string>
    <string name="target_sdk_version">Target SDK Version: %1$s</string>
    <string name="block_all">Block All</string>
    <string name="enable_all">Enable All</string>
    <string name="warning">Warning</string>
    <string name="warning_disable_all_component">You will disable all components in current screen, may cause the application unstable. Continue?</string>
    <string name="disabling_hint">Disabling components…</string>
    <string name="enabling_hint">Enabling components…</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="export_ifw_rules">Export IFW Rules</string>
    <string name="import_ifw_rules">Import IFW Rules</string>
    <string name="export_alert_message">You are going to export Intent Firewall rules to external storage, proceed?</string>
    <string name="import_alert_message">You are going to import Intent Firewall rules from external storage, proceed?</string>
    <string name="export_rule_succeed">Exported to %1$s folder in external storage</string>
    <string name="export_rule_failed">Failed to export rules to external storage</string>
    <string name="import_rule_failed_no_permission">Failed to import Intent Firewall rules, storage permission required.</string>
    <string name="import_rule_failed_exception">Failed to import rules, reason: %1$s</string>
    <string name="export_rule_failed_no_permission">Failed to export Intent Firewall rules, storage permission required.</string>
    <string name="export_rule_failed_exception">Failed to export rules, reason: %1$s</string>
    <plurals name="import_rule_succeed">
        <item quantity="one">Imported %1$d rule</item>
        <item quantity="other">Imported %1$d rules</item>
    </plurals>
    <plurals name="export_rule_succeed">
        <item quantity="one">Exported %1$d rule to folder %2$s</item>
        <item quantity="other">Exported %1$d rules to folder %2$s</item>
    </plurals>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_header_general">General</string>
    <string name="controller_settings">Controller Settings</string>
    <string name="controller_chooser_title">Choose Controller</string>
    <string name="controller_type">Controller Type</string>
    <string name="pref_header_about">About</string>
    <string name="fail">Failed</string>
    <string name="pref_rule_settings">Blocker Rules</string>
    <string name="pref_rule_path_summary">Rules will be saved to this folder</string>
    <string name="pref_rule_path_title">Set a Path</string>
    <string name="export_rules">Export Rules</string>
    <string name="import_rules">Import Rules</string>
    <string name="pref_ifw_settings">IFW Settings</string>
    <string name="about">About</string>
    <string name="import_rule">Import Rule</string>
    <string name="export_rule">Export Rule</string>
    <string name="processing">Processing…</string>
    <string name="import_fail_message">Import fail, rule does not exist.</string>
    <string name="reset_ifw">Reset IFW</string>
    <string name="import_mat_rules">Import MyAndroidTools Rules</string>
    <string name="others">Others</string>
    <string name="processing_progress_indicator">Processing Progress Indicator</string>
    <string name="notification_done">%1$d jobs were done</string>
    <string name="last_update_date">Last Update Time</string>
    <string name="need_storage_permission">Need storage permission to operate</string>
    <string name="export_all_rules_warning_message">You are going to export all rules to the external storage, which will override your existing rule files, proceed?</string>
    <string name="import_all_rules_warning_message">You are going to import all rules in the external storage, which will override your current settings for apps, proceeded?\n(Note: This will take a long time.)</string>
    <string name="export_all_ifw_rules_warning_message">You are going to export all Intent Firewall rules to the external storage, which will override your existing rule files, proceed?</string>
    <string name="import_all_ifw_rules_warning_message">You are going to import all Intent Firewall rules in the external storage, which will override your current settings for apps, proceeded?</string>
    <string name="reset_ifw_warning_message">You are going to delete all Intent Firewall rules, proceed?</string>
    <string name="ifw_reset_error">Error occurs while resetting your intent firewall rules.</string>
    <string name="cannot_find_file">Cannot find file: %1$s</string>
    <string name="processing_indicator">(%1$d/%2$d)</string>
    <string name="file_manager_required">You need to install a file manager from store first.</string>
    <string name="force_stop">Force Stop</string>
    <string name="launch_application">Launch Application</string>
    <string name="stop_service">Stop Service</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="clear_data">Clear Data</string>
    <string name="trim_memory">Trim Memory</string>
    <string name="details">Details</string>
    <string name="starting_application">Starting application, please wait</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="experimental_features">Experimental Features</string>
    <string name="auto_block">Auto Block</string>
    <string name="auto_block_summary">Stop background application while screen is off.</string>
    <string name="force_doze">Force Doze</string>
    <string name="force_doze_summary">Force device into Doze mode while screen is off.</string>
    <string name="force_stopped">Application stopped</string>
    <string name="data_cleared">Data Cleared</string>
    <string name="error">Error</string>
    <string name="experimental_features_warning">You have some experimental feature turned on.\nNote:\nRoot permission is needed.\nIt might not work on some Chinese ROMs.</string>
    <string name="require_permission_message">Blocker need your permission to continue operations.</string>
    <string name="report">Report</string>
    <string name="report_subject_template">Blocker Report: (Write down your subject here)</string>
    <string name="report_content_template">(Write down your problems below:)</string>
    <string name="send_email">Send Email…</string>
    <string name="copy_component_name">Copy Name</string>
    <string name="copy_full_name">Copy Full Name</string>
    <string name="component_name">Component Name</string>
    <string name="copied">Copied</string>
    <string name="rule_backup_settings">Backup settings</string>
    <string name="set_folder_to_save">Set folder to save</string>
    <string name="directory_invalid_or_not_set">Directory is invalid or not set</string>
    <string name="backup_system_apps">Backup system apps</string>
    <string name="backing_up_apps_please_wait">Backing up app rules, please wait…</string>
    <string name="backing_up_ifw_please_wait">Backing up IFW rules, please wait…</string>
    <string name="import_ifw_please_wait">Importing IFW rules, please wait…</string>
    <string name="reset_ifw_please_wait">Resetting IFW, please wait…</string>
    <string name="import_mat_rule_please_wait">Importing MAT rules, please wait…</string>
    <string name="import_app_rules_please_wait">Importing app rules, please wait…</string>
    <string name="failed_to_back_up">Failed to back up app rules, please check your permission or create feedback.</string>
    <string name="backup_finished">Backup app rules finished.</string>
    <string name="dir_is_invalid">Directory is invalid, please check if you have set the backup directory or not.</string>
    <string name="import_failed_message">Failed to import Blocker rules, please check if you have Super user permissions or not.</string>
    <string name="no_rules_imported">No rules imported, please check the folder or the permission.</string>
    <string name="export_ifw_failed_message">Failed to export IFW rules, did you grant permissions to Blocker?</string>
    <string name="export_ifw_successful_message">Successfully export %1$d IFW rules.</string>
    <string name="import_ifw_failed_message">Failed to import IFW rules, did you grant permissions to Blocker?</string>
    <string name="import_successfully">Import rules successfully</string>
    <string name="clear_ifw_message">Cleared %1$d IFW rules.</string>
    <string name="please_select_mat_files">Please select MyAndroidTools rules.</string>
    <string name="import_mat_failed_message">Failed to import MAT rules, did you grant permissions to Blocker?</string>
</resources>
