<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/launch_application"
        android:title="@string/launch_application" />
    <item
        android:id="@+id/force_stop"
        android:title="@string/force_stop" />
    <item
        android:id="@+id/enable_application"
        android:title="@string/enable" />
    <item
        android:id="@+id/disable_application"
        android:title="@string/disable" />
    <item
        android:id="@+id/clear_data"
        android:title="@string/clear_data" />
    <item
        android:id="@+id/trim_memory"
        android:title="@string/trim_memory" />
    <item
        android:id="@+id/disable_trim_memory"
        android:title="@string/disable_trim_memory" />
    <item
        android:id="@+id/details"
        android:title="@string/details" />
</menu>