<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:imeOptions="actionSearch"
        android:inputType="textCapWords"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/menu_filter"
        android:icon="@drawable/ic_sort_24dp"
        android:title="@string/menu_filter"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_refresh"
        android:title="@string/refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>